@@ -4,16 +4,22 @@ import com.codegen.hotelmanagementsystembackend.dto.HotelResponseDTO;
 import com.codegen.hotelmanagementsystembackend.dto.SearchResponseDTO;
 import com.codegen.hotelmanagementsystembackend.entities.Hotel;
 import com.codegen.hotelmanagementsystembackend.entities.Contract;
+import com.codegen.hotelmanagementsystembackend.entities.RoomType;
+import com.codegen.hotelmanagementsystembackend.entities.SeasonRoomType;
+import com.codegen.hotelmanagementsystembackend.repository.BookingRoomRepository;
 import com.codegen.hotelmanagementsystembackend.repository.HotelRepository;
 import com.codegen.hotelmanagementsystembackend.services.ProductService;
+import com.codegen.hotelmanagementsystembackend.services.SeasonService;
 import com.codegen.hotelmanagementsystembackend.util.StandardResponse;
 import com.codegen.hotelmanagementsystembackend.util.UtilityMethods;
+import jakarta.persistence.criteria.CriteriaBuilder;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.sql.Date;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -23,7 +29,8 @@ public class ProductServiceImpl implements ProductService {
     private final ModelMapper modelMapper;
     private final HotelRepository hotelRepository;
     private final UtilityMethods utilityMethods;
-
+    private final SeasonService seasonService;
+    private final BookingRoomRepository bookingRoomRepository;
 
     /**
      * Searches hotels based on the destination, number of rooms, check-in and check-out dates.
@@ -39,22 +46,23 @@ public class ProductServiceImpl implements ProductService {
         try {
             List<Hotel> hotels = hotelRepository.findByHotelNameContainingOrHotelCityContainingOrHotelCountryContaining(destination, destination, destination);
 
-            List<Hotel> hotelsWithActiveContracts = hotels.stream()
-                    .filter(hotel -> hasActiveContract(hotel, checkIn, checkOut))
-                    .collect(Collectors.toList());
+            List<Contract> activeHotelContracts = hotels.stream().map(hotel -> getActiveContract(hotel, checkIn, checkOut)).toList();
 
-            if (hotelsWithActiveContracts.isEmpty()) {
+            if (activeHotelContracts.isEmpty()) {
                 return new StandardResponse<>(404, "No hotels found with active contracts within the specified dates", null);
             }
 
-            List<SearchResponseDTO> searchResponseDTOS = hotelsWithActiveContracts.stream()
-                    .map(hotel -> {
+            List<Contract> contractsOfHotelsWithAvailableRooms = activeHotelContracts.stream()
+                    .filter(contract -> hasAvailableRooms(contract, checkIn, checkOut, noOfRooms))
+                    .toList();
+
+            List<SearchResponseDTO> searchResponseDTOS = contractsOfHotelsWithAvailableRooms.stream()
+                    .map(contract -> {
+                        Hotel hotel = utilityMethods.getHotel(contract.getHotel().getHotelId());
                         SearchResponseDTO searchResponseDTO = modelMapper.map(hotel, SearchResponseDTO.class);
-                        searchResponseDTO.setContractId(hotel.getContracts().stream()
-                                .filter(contract -> contract.getContractStatus().equalsIgnoreCase("Active"))
-                                .findFirst()
-                                .map(Contract::getContractId)
-                                .orElse(null)); // Set the contract ID
+                        searchResponseDTO.setHotelImage(hotel.getHotelImages().get(0).getHotelImageURL());
+                        searchResponseDTO.setLowestRoomTypePrice(lowestRoomTypePrice(contract, checkIn, checkOut));
+                        searchResponseDTO.setContractId(contract.getContractId());
                         return searchResponseDTO;
                     })
                     .collect(Collectors.toList());
@@ -94,21 +102,6 @@ public class ProductServiceImpl implements ProductService {
         }
     }
 
-    /**
-     * Check if the hotel has an active contract within the specified dates.
-     *
-     * @param  hotel    the hotel to check contracts for
-     * @param  checkIn  the check-in date for the contract
-     * @param  checkOut the check-out date for the contract
-     * @return          true if there is an active contract, false otherwise
-     */
-    private boolean hasActiveContract(Hotel hotel, Date checkIn, Date checkOut) {
-        return hotel.getContracts().stream()
-                .anyMatch(contract -> contract.getContractStatus().equalsIgnoreCase("Active") &&
-                        contract.getStartDate().before(checkOut) &&
-                        contract.getEndDate().after(checkIn));
-    }
-
     @Override
     public StandardResponse<List<SearchResponseDTO>> adminSearchHotels(String hotel) {
         try {
@@ -125,5 +118,60 @@ public class ProductServiceImpl implements ProductService {
             return new StandardResponse<>(500, "An error occurred while searching hotels", null);
         }
     }
+
+    private Contract getActiveContract(Hotel hotel, Date checkIn, Date checkOut) {
+        Optional<Contract> activeContractOptional = hotel.getContracts().stream()
+                .filter(contract -> contract.getContractStatus().equalsIgnoreCase("Active") &&
+                        contract.getStartDate().before(checkIn) &&
+                        contract.getEndDate().after(checkOut))
+                .findFirst();
+
+        return activeContractOptional.orElse(null);
+    }
+
+    public boolean hasAvailableRooms(Contract contract, Date checkIn, Date checkOut, Integer noOfRooms) {
+
+        Integer totalNumberOfRooms = 0;
+        Integer bookedRooms = 0;
+        // Get the season ID for the provided check-in and check-out dates
+        Integer seasonId = seasonService.getSeasonByCheckInOutDates(contract, checkIn, checkOut);
+
+        for (RoomType roomType : contract.getRoomTypes()) {
+            bookedRooms += bookingRoomRepository.countBookedRooms(roomType.getRoomTypeId(), checkIn, checkOut);
+            for (SeasonRoomType seasonRoomType : roomType.getSeasonRoomtype()) {
+                if (seasonRoomType.getSeason().getSeasonId().equals(seasonId)) {
+                    totalNumberOfRooms += seasonRoomType.getNoOfRooms();
+                    break;
+                }
+            }
+        }
+
+        // Check if there are enough available rooms
+        return totalNumberOfRooms - bookedRooms >= noOfRooms;
+    }
+
+    private Double lowestRoomTypePrice(Contract contract, Date checkIn, Date checkOut) {
+
+        Double lowestRoomTypePrice = null;
+        Integer seasonId = seasonService.getSeasonByCheckInOutDates(contract, checkIn, checkOut);
+
+        double initialPrice = Double.MAX_VALUE;
+        lowestRoomTypePrice = initialPrice;
+
+        for (RoomType roomType : contract.getRoomTypes()) {
+            for (SeasonRoomType seasonRoomType : roomType.getSeasonRoomtype()) {
+                if (seasonRoomType.getSeason().getSeasonId().equals(seasonId)) {
+                    lowestRoomTypePrice = Math.min(lowestRoomTypePrice, seasonRoomType.getRoomTypePrice());
+                }
+            }
+        }
+
+        if (lowestRoomTypePrice.equals(initialPrice)) {
+            return null;
+        }
+
+        return lowestRoomTypePrice;
+    }
+
 
 }
